+ getExperimentCrossAssociation: added MARGIN & paired options, efficiency of algorithm improved
+ Added *Features aliases for *Taxa functions
+ *RDA functions utilize vegan:dbrda instead of vegan:rda
+ Sped up estimateDivergence by removing unnecessary pairwise comparisons
+ Added new internal function .calculate_reference_distance to calculate distance to a single reference sample
+ added new skin microbiome example data set 'peerj13075'
+ added splitOn and unsplitOn functions
+ CLR transformation: remove internal relative transformation
+ Replace 'abund_values' argument with 'assay_name'
+ getExpCrossCorr: added altExp option
+ added detection threshold option to getTopTaxa
+ makeSummarizedExperimentFromBiom is now makeTreeSummarizedExperimentFromBiom
+ Added mergeSE function
+ bugfix: loadFromBiom

Changes in version 1.5.x 
+ Added HintikkaXOData
+ Added sample metadata option to getExperimentCrossAssociation
+ estimateFaith: add support for multiple rowTrees
+ calculateRDA/CCA: added variable argument & replaced altexp argument with altExp
+ getExpCrossCorr: bugfix; samples should match when correlations between features are calculated
+ getExpCrossCorr: Kendall's tau is the default method
+ mergeSEs: bugfix; links between trees and rows/cols were wrong & rowData did not include all info
+ calculateDPCoA, calculateUnifrac & merge: add support for multiple trees
+ altExp parameter to altexp
+ agglomerateByRank: make rownames unique by default
+ removed calculateDistance and calculateUniFrac alias
+ calculateUnifrac bugfix

Changes in version 1.7.x
+ makePhyloseqFromTreeSE: added option for choosing a tree from multiple rowTrees
+ mergeSEs: match rows based on all available taxonomy level data on rowData
+ mergeSEs: fix bug related to equally named variables that are different class
+ mergeSEs: option for merging multiple assays
+ calculateUnifrac: option for specifying the tree from TreeSE
+ transformCounts: utilize vegan package
