@@ -78,9 +78,9 @@
 #' GlobalPatterns <- runRDA(GlobalPatterns, data ~ SampleType)
 #' plotReducedDim(GlobalPatterns,"CCA", colour_by = "SampleType")
 #' 
-#' # To scale values when using *RDA functions, use transformFeatures
+#' # To scale values when using *RDA functions, use transformCounts(MARGIN = "features", 
 #' tse <- GlobalPatterns
-#' tse <- transformFeatures(tse, method = "z")
+#' tse <- transformCounts(tse, MARGIN = "features", method = "z")
 #' # Data might include taxa that do not vary. Remove those because after z-transform
 #' # their value is NA
 #' tse <- tse[ rowSums( is.na( assay(tse, "z") ) ) == 0, ]
