@@ -109,9 +109,9 @@ rowTree(x2) # ... tree
  # If assay contains binary or negative values, summing might lead to meaningless
  # values, and you will get a warning. In these cases, you might want to do 
  # agglomeration again at chosen taxonomic level.
- tse <- transformSamples(GlobalPatterns, method = "pa")
+ tse <- transformCounts(GlobalPatterns, method = "pa")
  tse <- agglomerateByRank(tse, rank = "Genus")
- tse <- transformSamples(tse, method = "pa")
+ tse <- transformCounts(tse, method = "pa")
 
 # removing empty labels by setting na.rm = TRUE
 sum(is.na(rowData(GlobalPatterns)$Family))
