@@ -72,7 +72,7 @@ samples have completely different relative abundances.
 \examples{
 data(esophagus)
 tse <- esophagus
-tse <- transformSamples(tse, method = "relabundance")
+tse <- transformCounts(tse, method = "relabundance")
 overlap <- calculateOverlap(tse, assay_name = "relabundance")
 overlap
 
