@@ -12,7 +12,7 @@ test_that("calculateOverlap", {
     expect_error(calculateOverlap(tse, detection = TRUE))
     
     # Calculate overlap
-    tse <- transformSamples(tse, method = "relabundance")
+    tse <- transformCounts(tse, method = "relabundance")
     result <- calculateOverlap(tse, assay_name = "relabundance", detection = 0.15)
     # Test output
     expect_true(class(result) == "dist")
